--- a/web/themes/digitac/scss/02_layout/_header.scss
+++ b/web/themes/digitac/scss/02_layout/_header.scss
@@ -296,6 +296,7 @@
 
   .account-list:not(.account-lang) {
     margin-bottom: 0;
+    padding-left: 0;
     list-style: none;
     display: flex;
     align-items: center;
