--- a/web/themes/digitac/scss/03_component/_modal.scss
+++ b/web/themes/digitac/scss/03_component/_modal.scss
@@ -49,6 +49,7 @@
             font-size: rem(18px);
             line-height: rem(28px);
             color: $primary;
+            text-align: left;
         }
 
         p {
@@ -58,6 +59,7 @@
             font-size: rem(14px);
             line-height: rem(20px);
             color: $grey-600;
+            text-align: left;
         }
     }
 
