--- a/web/themes/digitac/scss/digitac-hub.scss
+++ b/web/themes/digitac/scss/digitac-hub.scss
@@ -81,6 +81,7 @@
 @import '05_theme/view-id-soluciones';
 @import '05_theme/view-filters';
 @import '05_theme/view-votingapi-votes';
+@import '05_theme/view-distributivas';
 
 // page
 @import '05_theme/page/node--type-noticia';
@@ -90,4 +91,6 @@
 @import '05_theme/page/login';
 @import '05_theme/page/register';
 @import '05_theme/page/my-account';
+@import '05_theme/page/edit-comment';
+@import '05_theme/page/quienes-somos';
 
