--- a/web/themes/digitac/templates/content/comment.html.twig
+++ b/web/themes/digitac/templates/content/comment.html.twig
@@ -141,7 +141,7 @@
 
 {{reply_form}}
 
-<a href="" data-bs-toggle="modal" data-bs-target="#exampleModal-{{comment.id}}">Borrar comentario</a> lo dejamos como enlace hasta tener el modal.
+<!--<a href="" data-bs-toggle="modal" data-bs-target="#exampleModal-{{comment.id}}">Borrar comentario</a> lo dejamos como enlace hasta tener el modal.-->
 
 
 </article>
