--- a/web/themes/digitac/templates/views/views-view-fields--distributivas--block.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--distributivas--block.html.twig
@@ -41,7 +41,7 @@
                 {{ fields.uid.content }}
 
                 {% if 'experto' in user.getroles()  %}
-                <span class="expert">{{'Experto TAC'|t}}</span>
+                <span class="expertoTac">{{'Experto TAC'|t}}</span>
                 {% endif %}
 
             </span>
