--- a/web/themes/digitac/templates/views/views-view-fields--view-noticias--block.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--view-noticias--block.html.twig
@@ -16,7 +16,7 @@
             <span class="date">{{ fields.created.content }}</span>
         </div>
         <div class="title">{{ fields.title.content }}</div>
-        <div class="content">{{ fields.body.content }}</div>
+        <div class="content">{{ fields.body.content|render|striptags|trim }}</div>
     </div>
 
 </div>
