--- a/web/themes/digitac/scss/03_component/_paragraph-claim.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-claim.scss
@@ -105,7 +105,7 @@
                 height: auto;
             }
 
-            image {
+            /* image {
                 height: 281px;
                 object-fit: cover;
 
@@ -113,7 +113,7 @@
                     width: 100%;
                     height: 100%;
                 }
-            }
+            } */
         }
 
     }
