--- a/web/themes/digitac/scss/03_component/_paragraph-type-tabs.scss
+++ b/web/themes/digitac/scss/03_component/_paragraph-type-tabs.scss
@@ -24,5 +24,25 @@
 
     .tab-actions {
         margin-bottom: 0;
+
+        &__item {
+            padding: 0;
+
+            a {
+                width: 100%;
+                height: 100%;
+                padding: rem(10px) rem(14px);
+                display: inline-flex;
+
+                &.active {
+                    padding: rem(10px) rem(14px);
+                }
+            }
+
+            &.active {
+                padding: 0;
+            }
+        }
+
     }
 }
