--- a/web/themes/digitac/scss/05_theme/_view-id-content.scss
+++ b/web/themes/digitac/scss/05_theme/_view-id-content.scss
@@ -1,4 +1,5 @@
-.view-id-content {
+.view-id-content,
+.view-id-comment {
     background-color: $grey-50;
     border-top: rem(1px) solid $grey-200;
 
