--- a/web/themes/digitac/templates/paragraphs/paragraph--cabecera.html.twig
+++ b/web/themes/digitac/templates/paragraphs/paragraph--cabecera.html.twig
@@ -45,7 +45,8 @@
     'paragraph-pg-header',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-    not paragraph.isPublished() ? 'paragraph--unpublished'
+    not paragraph.isPublished() ? 'paragraph--unpublished',
+    'paragraph--title--' ~ content.field_pg_cabecera_titulo|render|striptags|trim|replace({' ': '_'})
   ]
 %}
 {% block paragraph %}
