--- a/web/themes/digitac/templates/paragraphs/paragraph--eliminar-cuenta.html.twig
+++ b/web/themes/digitac/templates/paragraphs/paragraph--eliminar-cuenta.html.twig
@@ -42,43 +42,40 @@
   set classes = [
     'paragraph',
     'paragraph-' ~ paragraph.bundle|clean_class,
+    'paragraph-pg-header',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
 %}
 {% block paragraph %}
-
-  <div {{ attributes.addClass(classes) }}>
-
-    {% block content %}
-    <div class="container">
-      <div class="paragraph-pg-claim__box">
-        <div class="title title-xl">
-          {{ content.field_pg_claim_supertitulo}}
+<div class="user-account">
+      <div class="user-box user-box--secondary">
+        <div class="container">
+          <a href data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-secondary">{{ 'Eliminar mi cuenta'|t}}</a>
         </div>
-        <div class="title">
-          {{ content.field_pg_claim_titulo}}
-        </div>
-        <div class="subtitle">
-          {{ content.field_pg_claim_subtitulo}}
-        </div>
-        <a href="{{ content.field_pg_claim_boton_enlace.0}}" class="btn btn--primary btn--primary--icon">{{ content.field_pg_claim_boton_texto.0}}</a>
-      </div>
-
-      <div class="paragraph-pg-claim__image">
-
-        <svg width="497" height="401" viewBox="0 0 497 401" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <clipPath id="clip-path2">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M90.7875 33.8323L90.7882 33.8317C110.553 15.1475 141.722 16.0235 160.406 35.7884L407.639 297.321C426.323 317.086 425.447 348.255 405.682 366.939L405.681 366.94C385.916 385.624 354.747 384.748 336.063 364.983L88.8307 103.451C70.1465 83.6857 71.0226 52.5166 90.7875 33.8323ZM289.788 59.8317L289.787 59.8323C270.023 78.5165 269.146 109.686 287.831 129.451L391.22 238.82C409.904 258.585 441.073 259.461 460.838 240.776L460.839 240.776C480.604 222.092 481.48 190.922 462.795 171.157L359.406 61.7884C340.722 42.0235 309.553 41.1475 289.788 59.8317ZM106.319 163.332C87.6344 143.567 56.4645 142.692 36.6996 161.376C16.9347 180.061 16.0586 211.23 34.7428 230.995L148.901 351.755C167.585 371.52 198.755 372.396 218.52 353.711C238.284 335.027 239.161 303.858 220.476 284.093L106.319 163.332Z" fill="#FF5353"/>
-          </clipPath>
-          <image clip-path="url(#clip-path2)" width="497" height="401" preserveAspectRatio="xMidYMid slice" href="{{ content.field_pg_claim_imagen.0['#markup']}}" alt="Image" class="svg__image">
-        </svg>
-
       </div>
 
 
+<!-- MODAL -->
+<div class="modal modal-delete fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-header__content">
+          <h3 class="modal-title" id="exampleModalLabel">{{'Eliminar Cuenta'|t}}</h3>
+          <p>{{'¿Estás seguro de querer eliminar tu cuenta?<br>Este proceso es automático, y tu cuenta será deshabilitada de inmediato.'|t}}</p>
+        </div>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <a href="/eliminar-cuenta/{{user.id}}" type="button" class="btn btn-primary btn-primary--alt">Eliminar</a>
+      </div>
     </div>
-    {% endblock %}
   </div>
+</div>
+
+</div>
+
 {% endblock paragraph %}
