--- a/web/themes/digitac/templates/views/views-view-fields--view-noticias--block_1.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--view-noticias--block_1.html.twig
@@ -10,7 +10,7 @@
                 <span class="date">{{ fields.created.content }}</span>
             </div>
             <div class="title">{{ fields.title.content }}</div>
-            <div class="content">{{ fields.body.content }}</div>
+            <div class="content">{{ fields.body.content|render|striptags|trim }}</div>
             <a href="{{ fields.view_node.content|render|striptags|trim }}" class="btn btn--link"> Leer {{ fields.field_noticia_tipo.content }}</a>
         </div>
     </div>
