--- a/web/themes/digitac/css/digitac-hub.css
+++ b/web/themes/digitac/css/digitac-hub.css
@@ -2301,6 +2301,7 @@ body:not(.path-frontpage) .header.fixed {
 .block-ideas__item-content .author {
   margin-bottom: 1.5rem;
   display: flex;
+  align-items: center;
 }
 .block-ideas__item-content .author__letters {
   min-width: 2.5rem;
@@ -3476,25 +3477,25 @@ body:not(.path-frontpage) .header.fixed {
   }
 }
 
-.block-digitac-h:not(.block-digitac-h-reto-block) {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) {
   background-color: #F9FAFB;
 }
 @media (min-width: 768px) {
-  .block-digitac-h:not(.block-digitac-h-reto-block) {
+  .block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) {
     padding: 5rem 0;
   }
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) #my-form-wrapper {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) #my-form-wrapper {
   max-width: 79.5rem;
   margin: 0 auto;
   padding: 0 0.75rem;
 }
 @media (min-width: 992px) {
-  .block-digitac-h:not(.block-digitac-h-reto-block) #my-form-wrapper {
+  .block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) #my-form-wrapper {
     padding: 0 0.75rem 0 19.5rem;
   }
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form h2 {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form h2 {
   margin-bottom: 1.25rem;
   font-family: "Open Sans", arial, sans-serif;
   font-style: normal;
@@ -3503,10 +3504,10 @@ body:not(.path-frontpage) .header.fixed {
   line-height: 2.375rem;
   color: #101828;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form .form-item {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form .form-item {
   margin-bottom: 1.25rem;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form .form-item label {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form .form-item label {
   margin-bottom: 0.375rem;
   font-family: "Open Sans", arial, sans-serif;
   font-style: normal;
@@ -3515,34 +3516,34 @@ body:not(.path-frontpage) .header.fixed {
   line-height: 1.25rem;
   color: #1D2939;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form .form-item .form-text {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form .form-item .form-text {
   min-height: 2.75rem;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form .form-item .form-select {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form .form-item .form-select {
   min-height: 2.75rem;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form .form-item .form-textarea {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form .form-item .form-textarea {
   height: 15.6875rem;
   resize: none;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form .button--danger {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form .button--danger {
   display: none;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) form .form-submit {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) form .form-submit {
   width: 100%;
   margin-top: 2rem;
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) .form-item-url {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) .form-item-url {
   max-width: 79.5rem;
   margin: 2rem auto 0;
   padding: 0 0.75rem;
 }
 @media (min-width: 768px) {
-  .block-digitac-h:not(.block-digitac-h-reto-block) .form-item-url {
+  .block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) .form-item-url {
     padding: 0 0.75rem 0 17.5rem;
   }
 }
-.block-digitac-h:not(.block-digitac-h-reto-block) .box-grey {
+.block-digitac-h:not(.block-digitac-h-reto-block):not(.block-digitac-h-user-edit-block) .box-grey {
   margin: 0;
   padding: 0;
   background: none;
@@ -4237,7 +4238,6 @@ body:not(.path-frontpage) .header.fixed {
   font-size: 0.875rem;
   line-height: 1.25rem;
   color: #344054;
-  text-indent: -9999px;
   cursor: pointer;
 }
 .fieldgroup.form-composite .form-type-checkbox .checkmark,
@@ -4278,6 +4278,10 @@ body:not(.path-frontpage) .header.fixed {
 .vbo-table .form-type-checkbox,
 .table .form-type-checkbox {
   margin-bottom: 0;
+}
+.vbo-table .form-type-checkbox label,
+.table .form-type-checkbox label {
+  text-indent: -9999px;
 }
 .vbo-table .form-type-checkbox label.visually-hidden,
 .table .form-type-checkbox label.visually-hidden {
@@ -5926,18 +5930,18 @@ body:not(.path-frontpage) .header.fixed {
   opacity: 1;
 }
 
-.block-formblock-user-edit {
+.block-digitac-h-user-edit-block {
   max-width: 79.5rem;
   margin: 0 auto;
   padding: 0 0.75rem;
 }
 @media (min-width: 768px) {
-  .block-formblock-user-edit {
+  .block-digitac-h-user-edit-block {
     padding: 0 2rem;
   }
 }
 @media (min-width: 992px) {
-  .block-formblock-user-edit {
+  .block-digitac-h-user-edit-block {
     padding: 0 0.75rem;
   }
 }
@@ -9136,9 +9140,121 @@ body:not(.path-frontpage) .header.fixed {
   border: none;
 }
 
-.block-formblock-user-edit {
+.block-digitac-h-user-edit-block {
   margin-top: 5rem;
-  background-color: #ffffff;
+}
+.block-digitac-h-user-edit-block .form-submit {
+  margin: 0;
+}
+.block-digitac-h-user-edit-block .form-submit#edit-submit {
+  padding: 0.625rem 1rem;
+  text-align: center;
+  border: none;
+  border-radius: 0;
+  border: 0.0625rem solid #475467;
+  font-family: "Open Sans", arial, sans-serif;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  border-radius: 3.125rem;
+  color: #ffffff;
+  border-color: #196E8C;
+  background-color: #196E8C;
+}
+.block-digitac-h-user-edit-block .form-submit#edit-submit:hover {
+  border-color: #115B75;
+  background-color: #115B75;
+  color: #ffffff;
+}
+.block-digitac-h-user-edit-block .form-item {
+  margin-bottom: 1.875rem;
+}
+.block-digitac-h-user-edit-block .form-item label {
+  margin-bottom: 0.375rem;
+  font-family: "Open Sans", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: #1D2939;
+}
+.block-digitac-h-user-edit-block .form-item .description {
+  margin-top: 0.375rem;
+  font-family: "Open Sans", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+  color: #1D2939;
+}
+.block-digitac-h-user-edit-block .form-item .description a {
+  color: #196E8C;
+  text-decoration: none;
+}
+.block-digitac-h-user-edit-block .form-item .description a:hover {
+  text-decoration: underline;
+}
+.block-digitac-h-user-edit-block .form-type-password {
+  max-width: 56.5rem;
+}
+.block-digitac-h-user-edit-block .form-type-password .password-confirm-message {
+  font-family: "Open Sans", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+  color: #1D2939;
+}
+.block-digitac-h-user-edit-block .form-type-password-confirm .form-item {
+  max-width: 56.5rem;
+  width: 100%;
+}
+.block-digitac-h-user-edit-block .form-type-password-confirm .password-strength {
+  margin-top: 0.75rem;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.block-digitac-h-user-edit-block .form-type-password-confirm .password-strength .password-strength__meter {
+  height: 0.375rem;
+  border-radius: 0.75rem;
+}
+.block-digitac-h-user-edit-block .form-type-password-confirm .password-strength .password-strength__title {
+  font-family: "Open Sans", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 1.125rem;
+  color: #1D2939;
+}
+.block-digitac-h-user-edit-block .box-grey > p {
+  margin-bottom: 1.5rem;
+  font-family: "Open Sans", arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.875rem;
+  line-height: 1.875rem;
+  color: #101828;
+}
+.block-digitac-h-user-edit-block .box-grey > p strong {
+  font-weight: 400;
+}
+
+.text-formatted.field--type-text-with-summary {
+  max-width: 79.5rem;
+  margin: 0 auto;
+  padding: 0 0.75rem;
+}
+@media (min-width: 768px) {
+  .text-formatted.field--type-text-with-summary {
+    padding: 0 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .text-formatted.field--type-text-with-summary {
+    padding: 0 0.75rem;
+  }
 }
 
 .edit_content_wrapper .comment-form {
