--- a/web/themes/digitac/scss/03_component/_block-ideas.scss
+++ b/web/themes/digitac/scss/03_component/_block-ideas.scss
@@ -151,6 +151,7 @@
             .author {
                 margin-bottom: rem(24px);
                 display: flex;
+                align-items: center;
 
                 &__letters {
                     min-width: rem(40px);
