--- a/web/themes/digitac/templates/system/page--user--password.html.twig
+++ b/web/themes/digitac/templates/system/page--user--password.html.twig
@@ -63,7 +63,7 @@ set footer_classes = 'footer' ~
 	</header>
 
 	<main role="main">
-
+AA{{route_name}}AA
 		<div class="login login--password">
 			<div class="login__col login__col-left">
 				<img src="/themes/digitac/images/digitac-login.jpg" alt="" class=""/>
@@ -80,7 +80,7 @@ set footer_classes = 'footer' ~
 						<h1>Recuperar  contraseña</h1>
 						<p>Indícanos el email asociado a tu cuenta  y te enviaremos un enlace para que puedas elegir una nueva contraseña
 						</p>
-						<a href="/user/register" class="btn btn-link">Volver</a>
+						<a href="/user/login" class="btn btn-link">Volver</a>
 					</div>
 
 					{{ page.content }}
