--- a/web/themes/digitac/templates/system/page--user--reset.html.twig
+++ b/web/themes/digitac/templates/system/page--user--reset.html.twig
@@ -63,7 +63,7 @@ set footer_classes = 'footer' ~
 	</header>
 
 	<main role="main">
-
+AA{{proc}}AA
 		<div class="login login--password">
 			<div class="login__col login__col-left">
 				<img src="/themes/digitac/images/digitac-login.jpg" alt="" class=""/>
